[package]
name = "bevy_girk_client_fw"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { workspace = true }
bevy_fn_plugin = { workspace = true }
bevy_kot_ecs   = { workspace = true }
bevy_kot_utils = { workspace = true }
bevy_replicon  = { workspace = true }
iyes_progress  = { workspace = true }
serde          = { workspace = true }
tracing        = { workspace = true }

bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_utils   = { path = "../bevy_girk_utils" }
