[package]
name = "bevy_girk_game_instance"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { version = "0.11", default-features = false }
bevy_kot       = { workspace = true }
bevy_simplenet = { workspace = true }
enfync         = { workspace = true }
serde          = { workspace = true }
serde_with     = { workspace = true }
tracing        = { workspace = true }

bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_utils   = { path = "../bevy_girk_utils" }
