[package]
name = "bevy_girk_host_server"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { version = "0.11", default-features = false }
bevy_kot       = { workspace = true }
bevy_simplenet = { workspace = true, features = ["client", "server", "bevy"] }
serde          = { workspace = true }
tracing        = { workspace = true }

bevy_girk_backend_public = { path = "../bevy_girk_backend_public" }
bevy_girk_game_fw        = { path = "../bevy_girk_game_fw" }
bevy_girk_game_instance  = { path = "../bevy_girk_game_instance" }
bevy_girk_utils          = { path = "../bevy_girk_utils" }
