[package]
name = "bevy_girk_utils"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { workspace = true }
bevy_kot_ecs   = { workspace = true }
bevy_fn_plugin = { workspace = true }
bevy_renet     = { workspace = true }
bevy_replicon  = { workspace = true }
serde          = { workspace = true }
serde_with     = { workspace = true }
tracing        = { workspace = true }

bincode     = { version = "1.3" }
crossbeam   = { version = "0.8" }
fxhash      = { version = "0.2" }
siphasher   = { version = "1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8" }
